# cdn-system-design-backend

./: manage.py  pyproject.toml
testcdn/: asgi.py  settings.py  urls.py  wsgi.py
